# autonoma

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  README.ko.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: harness_knob_inventory.md
docs/blog/: autonoma-introduction.md
nginx/: nginx.conf  nginx.init.conf
scripts/: check_readme_drift.py  gh_app_token.py  init-ssl.sh  install_native_api.sh  run_api_native.sh
src/autonoma/: __init__.py  api.py  auth.py  cli.py  config.py  context.py  dialogue_style.py  event_bus.py  external_input.py  llm.py  model_catalog.py  models.py  progress.py  sandbox.py  templates.py  tracing.py  tts.py  tts_base.py  tts_omnivoice.py  tts_omnivoice_mlx.py  tts_synth.py  tts_vibevoice.py  tts_worker.py  world.py
src/autonoma/agents/: __init__.py  base.py  director.py  harness.py  swarm.py
src/autonoma/agents/tools/: __init__.py  fetch_url.py  git_pr.py
src/autonoma/cutscenes/: __init__.py  model.py  store.py
src/autonoma/db/: __init__.py  engine.py  harness_policies.py  registry.py  schema.py  users.py
src/autonoma/engine/: __init__.py  runner.py
src/autonoma/harness/: __init__.py  action_strategies.py  budget_strategies.py  cache_strategies.py  checkpoint_strategies.py  decision_strategies.py  enforcement_strategies.py  llm_error_strategies.py  loop_strategies.py  memory_strategies.py  message_strategies.py  mood_strategies.py  observability.py  pipeline.py  policy.py  routing_strategies.py  safety_enforcement_strategies.py  safety_strategies.py  spawn_strategies.py  stall_strategies.py  strategies.py  system_strategies.py  validation.py
src/autonoma/memory/: __init__.py  embeddings.py
src/autonoma/mocap/: __init__.py  store.py  triggers.py  validator.py
src/autonoma/routers/: __init__.py  agents.py  bridges.py  cutscenes.py  live.py  personas.py  playback.py  podcast.py  scheduler.py  sign.py  standup.py  swarm_battle.py  translate.py  vision.py  voice.py
src/autonoma/scheduler/: __init__.py  model.py  runner.py  store.py
src/autonoma/tui/: __init__.py  renderer.py  sprites.py
src/autonoma/voice/: __init__.py  asr.py  fs.py  metrics.py  store.py  transcripts_store.py  vrm_map.py
src/autonoma/workspace/: __init__.py  manager.py
src/autonoma/world/: __init__.py  _events.py  diary_search.py  encounters.py  environment.py  inner_life.py  personality.py  raids.py
tests/: conftest.py  test_assertion_replacements.py  test_auth.py  test_cli.py  test_cutscene_owner_scope.py  test_cutscenes.py  test_db_migrations_idempotent.py  test_dialogue_style.py  test_diary_rag_injection.py  test_diary_search.py  test_emote.py  test_event_bus.py  test_external_input.py  test_feature_pack_2026.py  test_fixes.py  test_git_pr_tool.py  test_harness.py  test_harness_action_json.py  test_harness_api.py  test_harness_decision.py  test_harness_enforcement.py  test_harness_llm_error.py  test_harness_loop.py  test_harness_memory.py  test_harness_message_priority.py  test_harness_mood.py  test_harness_observability.py  test_harness_phase3_behavior.py  test_harness_policy.py  test_harness_policy_consumed.py  test_harness_routing.py  test_harness_safety.py  test_harness_safety_enforcement.py  test_harness_spawn.py  test_harness_stall.py  test_harness_strategies.py  test_harness_validation.py  test_headless_swarm.py  test_llm_retry.py  test_mocap_quota.py  (+28 more)
web/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
web/public/mediapipe/: README.md
web/public/vrm/: LICENSES.md
web/scripts/: fetch-mediapipe.mjs  sync-vrm-licenses.mjs
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/admin/memory/: page.tsx
web/src/app/admin/runs/: page.tsx
web/src/app/admin/users/: page.tsx
web/src/app/agent/[name]/: page.tsx
web/src/app/chibi-gallery/: page.tsx
web/src/app/cutscenes/: page.tsx
web/src/app/mocap/: page.tsx
web/src/app/obs/: page.tsx
web/src/app/podcast/: page.tsx
web/src/app/pose-editor/: page.tsx
web/src/app/showdown/: page.tsx
web/src/app/voice/: page.tsx
web/src/app/watch/[code]/: page.tsx
web/src/components/: AgentModal.tsx  AuthModal.tsx  BossOverlay.tsx  ChatInput.tsx  ChatPanel.tsx  ConversationModeToggle.tsx  EndScreen.tsx  EventLog.tsx  ExecutionTimeline.tsx  FileTree.tsx  HarnessPanel.tsx  Header.tsx  IdleScreen.tsx  KeyboardHelpModal.tsx  LiveChatPollPanel.tsx  MemoryInspector.tsx  Minimap.tsx  ModelSettingsModal.tsx  PushToTalkButton.tsx  RelationshipWeb.tsx  ReviewQueue.tsx  Stage.tsx  Starfield.tsx  StatusBox.tsx  SubtitleOverlay.tsx  TaskPanel.tsx  TemplateSelector.tsx  ThemeToggle.tsx  Toast.tsx  TradingCard.tsx
web/src/components/mocap/: BindingEditor.tsx  CharacterPicker.tsx  ClipLibrary.tsx  MocapPreview.tsx  SkeletonOverlay.tsx  TimelineTrimmer.tsx  WebcamPanel.tsx
web/src/components/poseEditor/: BoneHandles.tsx  PoseEditorPanel.tsx  PoseEditorScene.tsx
web/src/components/stage/: Chibi.tsx  MapScene.tsx  useAgentMotion.ts
web/src/components/stage/chibi/: theme.ts  types.ts  variants.ts
web/src/components/stage/pixel/: PixelCharacter.tsx  PixelMap.tsx  characterSprite.ts  drawGrid.ts  mapData.ts  objectSprites.ts  (+3 more)
web/src/components/vtuber/: ChatOverlay.tsx  VRMCharacter.tsx  VTuberFace.tsx  VTuberStage.tsx  faceSeed.ts  vrmCatalog.json  vrmCredits.ts
web/src/hooks/: useAgentProfile.ts  useAgentVoice.ts  useAlwaysOnVoice.ts  useAuth.ts  useCutscenes.ts  useHarnessPresets.ts  useKeyNav.ts  useModalA11y.ts  usePushToTalk.ts  useReplay.ts  useSfx.ts  useSwarm.ts  useTheme.ts  useTranslate.ts  useVoiceCommand.ts
web/src/hooks/mocap/: useMocap.ts  useMocapBindings.ts  useMocapClips.ts
web/src/hooks/voice/: useVoiceBindings.ts  useVoiceEventState.ts  useVoiceProfiles.ts
web/src/lib/: events.ts  strings.ts  types.ts
web/src/lib/mocap/: alignment.ts  clipFormat.ts  clipPlayer.ts  config.ts  gzipEncode.ts  oneEuro.ts  skeleton.ts  solver.ts  triggers.ts  vrmCalibration.ts  vrmShared.ts
web/src/lib/poseEditor/: fingerPresets.ts  ik.ts  poseClip.ts
web/src/types/: vad-web.d.ts
(+11 files in other folders)
