[project]
name = "autonoma"
version = "0.1.0"
description = "Self-organizing autonomous agent swarm with animated terminal UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.92.0",
    "openai>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "aiofiles>=24.1.0",
    "fastapi>=0.135.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.2.0",
]

# Optional heavy ML stack for OmniVoice zero-shot TTS.
#
# Kept out of the base install because torch + torchaudio + librosa +
# model weights add ~2GB to dev environments that never touch voice.
# Enable with:  uv sync --extra tts
# The Dockerfile.api stage adds this extra so the deployed API has
# synthesis; the CLI-only build can skip it.
[project.optional-dependencies]
tts = [
    "omnivoice>=0.1.4",
    "soundfile>=0.13",
    "numpy>=2.0",
    "torch>=2.1",
    "torchaudio>=2.1",
]

[project.scripts]
autonoma = "autonoma.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autonoma"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

# Pin torch / torchaudio to the CPU-only wheels on Linux x86_64 so the
# container image stays ~300 MB instead of the ~2.5 GB CUDA build pulled
# from PyPI by default. macOS and arm64 (Apple Silicon) resolve normally
# so dev machines keep MPS acceleration.
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
