[project]
name = "autonoma"
version = "0.1.0"
description = "Self-organizing autonomous agent swarm with animated terminal UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.92.0",
    "openai>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.9.0",
    "click>=8.1.0",
    "aiofiles>=24.1.0",
    "fastapi>=0.135.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.44.0",
    "websockets>=16.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.2.0",
    # Pinned to the 4.51 line so vibevoice 1.0.0 imports cleanly —
    # it depends on ``transformers.models.qwen2.tokenization_qwen2_fast``
    # which was relocated/removed in transformers 5. Cohere ASR
    # (``CohereAsrForConditionalGeneration``) requires 5.x but is
    # disabled (``AUTONOMA_VOICE_ASR_PROVIDER=none``) for the same
    # reason. Lift this pin once vibevoice ships transformers-5
    # compatibility and we can flip ASR back on.
    "transformers>=4.51,<5",
]

# Optional heavy ML stack for the TTS backends.
#
# Kept out of the base install because torch + torchaudio + librosa
# add ~2 GB to dev environments that never touch voice.
# Enable with:  uv sync --extra tts
#
# IMPORTANT: ``omnivoice`` was removed from this extra. omnivoice
# 0.1.4 requires ``transformers>=5.3``, which is incompatible with
# vibevoice 1.0.0 (~4.51) — and the project's base now pins
# transformers <5. If you want OmniVoice back, either downgrade to
# an older omnivoice that allows transformers 4.x, or wait for a
# vibevoice release that supports transformers 5 and lift the
# transformers pin in [project.dependencies].
[project.optional-dependencies]
tts = [
    "soundfile>=0.13",
    "numpy>=2.0",
    "torch>=2.1",
    "torchaudio>=2.1",
    # Audio I/O for the vibevoice path (ref-audio resample / WAV
    # decode). omnivoice used to pull this transitively; now we
    # depend on it directly so a future audio-only feature still
    # has it without re-adding omnivoice.
    "librosa>=0.10",
]

# Memory RAG (feature #5) — optional embedding backend for AgentMemory.
# Without this extra ``recall_semantic`` silently falls back to keyword
# substring search (the historical behaviour). Enable with:
#     uv sync --extra memory-rag
# Reuses the torch already pulled by ``tts`` if both extras are on.
memory-rag = [
    "sentence-transformers>=2.7",
]

# Microsoft VibeVoice intentionally omitted from optional-dependencies
# because uv struggles to resolve the upstream git source against our
# requires-python matrix. Operators install it imperatively in the
# venv that runs the API:
#
#   uv pip install \\
#     'vibevoice[streamingtts] @ git+https://github.com/microsoft/VibeVoice.git@main'
#
# At runtime select via ``AUTONOMA_TTS_PROVIDER=vibevoice``. The TTS
# factory falls back to StubTTSClient if the package isn't installed
# (loud warning in the log), so leaving this out doesn't break boot.

[project.scripts]
autonoma = "autonoma.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autonoma"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

# Pin torch / torchaudio to the CPU-only wheels on Linux x86_64 so the
# container image stays ~300 MB instead of the ~2.5 GB CUDA build pulled
# from PyPI by default. macOS and arm64 (Apple Silicon) resolve normally
# so dev machines keep MPS acceleration.
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
